# naturwb-module

./: .gitignore  README.md  naturwb.py  pyproject.toml  requirements.txt  setup.py
naturwb/: __init__.py  naturwb.py
src/naturwb/: __init__.py  naturwb.py
